db/yaml/e2e-remediation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-sa-managed
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-sa-managed2
