db/yaml/e2e-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: collector
  name: collector-deployment
  namespace: apolicy
spec:
  replicas: 1
  selector:
    matchLabels:
      component: collector
  template:
    metadata:
      labels:
        component: collector
    spec:
      serviceAccountName: sa-apolicy
      containers:
        - name : collector
          image: local/e2e-collector
